// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetails isSelected drives the styling for the card 1`] = `
<DocumentFragment>
  <div
    class="instanceDetailsCardContainer selected"
    data-automation-id="instance-card"
  >
    <div
      class="instanceDetailsCard selected interactive"
      tabindex="-1"
    >
      <div>
        <table
          class="reportInstanceTable"
        >
          <tbody />
        </table>
        <button
          aria-label="highlight test-id"
          aria-pressed="true"
          class="hiddenHighlightButton"
        />
        <mock-instancedetailsfooter
          deps="[object Object]"
          result="[object Object]"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InstanceDetails isSelected drives the styling for the card 2`] = `
<DocumentFragment>
  <div
    class="instanceDetailsCardContainer"
    data-automation-id="instance-card"
  >
    <div
      class="instanceDetailsCard interactive"
      tabindex="-1"
    >
      <div>
        <table
          class="reportInstanceTable"
        >
          <tbody />
        </table>
        <button
          aria-label="highlight test-id"
          aria-pressed="false"
          class="hiddenHighlightButton"
        />
        <mock-instancedetailsfooter
          deps="[object Object]"
          result="[object Object]"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InstanceDetails renders 1`] = `
<DocumentFragment>
  <div
    class="instanceDetailsCardContainer"
    data-automation-id="instance-card"
  >
    <div
      class="instanceDetailsCard interactive"
      tabindex="-1"
    >
      <div>
        <table
          class="reportInstanceTable"
        >
          <tbody />
        </table>
        <button
          aria-label="highlight body img"
          class="hiddenHighlightButton"
        />
        <mock-instancedetailsfooter
          deps="[object Object]"
          result="[object Object]"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InstanceDetails renders nothing when there is no card row configuration for the property / no property 1`] = `
<DocumentFragment>
  <div
    class="instanceDetailsCardContainer"
    data-automation-id="instance-card"
  >
    <div
      class="instanceDetailsCard interactive"
      tabindex="-1"
    >
      <div>
        <table
          class="reportInstanceTable"
        >
          <tbody />
        </table>
        <button
          aria-label="highlight test-id"
          class="hiddenHighlightButton"
        />
        <mock-instancedetailsfooter
          deps="[object Object]"
          result="[object Object]"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
